<resources>
    <string name="app_name">RentEase</string>
    <string name="tagline">Sewa Barang Dengan Mudah</string>
    <string name="app_logo">App Logo</string>
    
    <!-- Login Screen -->
    <string name="login_title">Masuk</string>
    <string name="login_subtitle">Selamat datang kembali! Silakan masuk ke akun Anda</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Kata Sandi</string>
    <string name="login_button">Masuk</string>
    <string name="signup_button">Daftar</string>
    <string name="forgot_password">Lupa kata sandi?</string>
</resources>